<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="UDT_ValveData_RD" Id="{8fb03431-a909-42fc-ae88-dbefc61f4669}">
    <Declaration><![CDATA[TYPE UDT_ValveData_RD :
STRUCT
holdTime       : TIME; // 阀动作保持时间
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>